<resources>
    <string name="app_name">Number composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_title">Cостав числа</string>
    <string name="image_of_brain">Image of brain</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху , в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу и верхней фигуре, для этого нужно вставить недостающее число. \n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, так как 3+4 = 7</string>
    <string name="start_game_button">Начать игру</string>
    <string name="sumofnumbers">sumOfNumbers</string>
    <string name="answers_progress">answersProgress</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="won_or_not_picture">wonOrNotPicture</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="required_answers">Необходимое число правильных ответов: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="try_again_button">ПОПРОБОВАТЬ СНОВА</string>
    <string name="choose_level_title">Выбери уровень</string>
    <string name="test_level">ТЕСТОВЫЙ</string>
    <string name="easy_level">ЛЁГКИЙ</string>
    <string name="normal_level">СРЕДНИЙ</string>
    <string name="hard_level">ТЯЖЕЛЫЙ</string>
    <string name="button_start_game">НАЧАТЬ ИГРУ</string>
</resources>