<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.GameFinishedFragment">
    
    
    <ImageView
        android:id="@+id/pictureResult"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/won_or_not_picture"
        tools:srcCompat ="@drawable/cry_5141"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/required_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_score_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
        />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_score_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/score_percentage"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
        />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    

</androidx.constraintlayout.widget.ConstraintLayout>