<?xml version="1.0" encoding="utf-8"?>
    <layout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.WelcomeFragment">

    <ImageView
        android:id="@+id/imageViewBrain"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_of_brain"
        android:src="@drawable/artificial_intelligence_14076"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/numberTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewBrain"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_rules"
        android:textSize="16sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/buttonStartGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_margin="16dp"
            android:backgroundTint="#F8C8DC"
            android:text="@string/button_start_game"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>